err/lj-commons.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/lj_commons'...
Compiling './lib/python3.5/site-packages/lj_commons/command_parse.py'...
***   File "./lib/python3.5/site-packages/lj_commons/command_parse.py", line 8
    print parser.parse_args(['-a', '-bval', '-c', '3'])
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lj_commons/config.py'...
***   File "./lib/python3.5/site-packages/lj_commons/config.py", line 7
    print type(sender)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lj_commons/mail.py'...
***   File "./lib/python3.5/site-packages/lj_commons/mail.py", line 41
    print """
        Use 'ljmail-generate-config' to generate 'mail_config' file
        """
             
                                                                   
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lj_commons/test.py'...
***   File "./lib/python3.5/site-packages/lj_commons/test.py", line 4
    print 'ARGV      :', sys.argv[1:]
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lj_commons-0.4.egg-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
